--- a/index.html
+++ b/index.html
@@ -72,7 +72,11 @@
     "jspdf": "https://aistudiocdn.com/jspdf@^2.5.1",
     "html2canvas": "https://aistudiocdn.com/html2canvas@^1.4.1",
     "chart.js": "https://aistudiocdn.com/chart.js@^4.4.3",
-    "zod": "https://aistudiocdn.com/zod@^3.23.8"
+    "zod": "https://aistudiocdn.com/zod@^3.23.8",
+    "firebase/app": "https://www.gstatic.com/firebasejs/10.12.2/firebase-app.js",
+    "firebase/auth": "https://www.gstatic.com/firebasejs/10.12.2/firebase-auth.js",
+    "firebase/firestore": "https://www.gstatic.com/firebasejs/10.12.2/firebase-firestore.js",
+    "firebase/": "https://aistudiocdn.com/firebase@^12.6.0/"
   }
 }
 </script>
