--- a/index.html
+++ b/index.html
@@ -1,4 +1,3 @@
-
 <!DOCTYPE html>
 <html lang="pt-br">
   <head>
@@ -81,7 +80,7 @@
 }
 </script>
 </head>
-  <body class="bg-slate-50 dark:bg-slate-900">
+  <body class="bg-slate-50 dark:bg-slate-900 text-slate-900 font-bold dark:font-normal dark:text-slate-300">
     <div id="root"></div>
     <script type="module" src="/index.tsx"></script>
   </body>
