--- a/index.html
+++ b/index.html
@@ -79,6 +79,7 @@
   }
 }
 </script>
+<link rel="stylesheet" href="/index.css">
 </head>
   <body class="bg-slate-50 dark:bg-slate-900 text-slate-900 font-bold dark:font-normal dark:text-slate-300">
     <div id="root"></div>
