--- a/index.html
+++ b/index.html
@@ -1,3 +1,4 @@
+
 <!DOCTYPE html>
 <html lang="pt-br">
   <head>
@@ -19,7 +20,7 @@
         -moz-osx-font-smoothing: grayscale;
       }
       
-      /* --- Animações e Feedback Visual --- */
+      /* --- Animações e Feedback Visual Otimizados --- */
 
       /* Animação de Fade-in */
       @keyframes fadeIn {
@@ -27,30 +28,31 @@
         to { opacity: 1; transform: translateY(0); }
       }
       .animate-fade-in {
-        animation: fadeIn 0.5s ease-out forwards;
+        animation: fadeIn 0.4s ease-out forwards;
+        will-change: transform, opacity; /* Promove para camada da GPU */
       }
 
       /* Feedback de clique para botões */
       .btn-press {
         transition: transform 0.1s ease-out;
+        will-change: transform;
       }
       .btn-press:active {
-        transform: scale(0.95);
+        transform: scale(0.96);
       }
 
       /* Animação "Pop" para ícones */
       @keyframes popIn {
         0% { transform: scale(0.8); opacity: 0; }
-        50% { transform: scale(1.2); opacity: 1; }
+        60% { transform: scale(1.1); opacity: 1; }
         100% { transform: scale(1); }
       }
       .animate-pop-in {
         animation: popIn 0.4s cubic-bezier(0.175, 0.885, 0.32, 1.275) forwards;
+        will-change: transform, opacity;
       }
 
-      /* Animação de Desenho (Stroke) para Checkmarks 
-         Ajustado para path length ~12-15px
-      */
+      /* Animação de Desenho (Stroke) */
       @keyframes drawCheck {
         0% { stroke-dasharray: 20; stroke-dashoffset: 20; }
         100% { stroke-dashoffset: 0; }
@@ -59,6 +61,7 @@
         stroke-dasharray: 20;
         stroke-dashoffset: 20;
         animation: drawCheck 0.5s ease-out forwards;
+        /* will-change não é ideal para stroke-dashoffset, mas ok para pequenas animações */
       }
     </style>
   <script type="importmap">
